# herbert

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/scripts/: post_deploy.sh
.github/workflows/: deploy.yml
data/: journal.docx  ocr_prompt.txt
data/ocr_hints/: hints.txt
data/test_scans/quality_analysis/: README.md  opus_0_hints.odt  opus_11_hints.odt  sonnet_0_hints.odt  sonnet_11_hints.odt
image_processing/scripts/: 1_batch_convert.py  2_image_deskew.py  3_stitch_images.py
journal_processing/scripts/: extract.py  post_deploy.sh
src/herbert/: __init__.py  __main__.py  extractor.py  ocr.py
src/herbert/commands/: __init__.py  extract.py  ocr.py
