[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "herbert"
version = "0.1.0"
description = "Herbert journal processing toolkit"
authors = [{ name = "Clive Holloway" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml",
    "python-docx",
]

[project.scripts]
herbert = "herbert.__main__:main"

